 * Fix: `RichText` values can now be correctly evaluated as booleans (Mike Dingjan, Bertrand Bordage)
 * Fix: wagtailforms no longer assumes an .html extension when determining the landing page template filename (kakulukia)
 * Fix: Fixed styling glitch on bi-colour icon + text buttons in Chrome (Janneke Janssen)


1.5.3 (18.07.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Pin html5lib to version 0.999999 to prevent breakage caused by internal API changes (Liam Brenner)


1.5.2 (08.06.2016)
~~~~~~~~~~~~~~~~~~

 * Fixed regression in 1.5.1 on editing external links (Stephen Rice)

1.5.1 (07.06.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: When editing a document link in rich text, the document ID is no longer erroneously interpreted as a page ID (Stephen Rice)
 * Fix: Removing embedded media from rich text by mouse click action now gets correctly registered as a change to the field (Loic Teixeira)
 * Fix: Rich text editor is no longer broken in InlinePanels (Matt Westcott, Gagaro)
 * Fix: Rich text editor is no longer broken in settings (Matt Westcott)
 * Fix: Link tooltip now shows correct urls for newly inserted document links (Matt Westcott)
 * Fix: Now page chooser (in a rich text editor) opens up at the link's parent page, rather than at the page itself (Matt Westcott)
 * Fix: Reverted fix for explorer menu scrolling with page content, as it blocked access to menus that exceed screen height
 * Fix: Image listing in the image chooser no longer becomes unpaginated after an invalid upload form submission (Stephen Rice)
 * Fix: Applied correct translation tags for 'permanent' / 'temporary' labels on redirects (Matt Westcott)


1.5 (31.05.2016)
~~~~~~~~~~~~~~~~

 * Added wagtail.contrib.modeladmin, an app for configuring arbitrary Django models to be edited through the Wagtail admin (Andy Babic)
 * Added TableBlock, a StreamField block for table-based content (Moritz Pfeiffer, David Seddon, Brad Busenius)